--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "pug-html-loader": "^1.1.5",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0",
